wip affinity template

--- a/src/assets/data/items/vitality_increase_potion.json
+++ b/src/assets/data/items/vitality_increase_potion.json
@@ -7,5 +7,5 @@
   "subType": "Cooldown: 1 second",
   "bound": "Binds when obtained",
   "destruction": "<span style=\"color: #C24B46\">Unsellable</span>,<span style=\"color: #C24B46\">Indestructible</span>,<span style=\"color: #C24B46\">Cannot be dismantled</span>",
-  "description": "Upon acquiring, automatically obtain <span style=\"color=: #6FFFCF\">5</span> Vitality."
+  "description": "Upon acquiring, automatically obtain <span style=\"color:#6FFFCF\">5</span> Vitality."
 }
