--- a/src/assets/data/items/vitality_increase_potion.json
+++ b/src/assets/data/items/vitality_increase_potion.json
@@ -4,8 +4,8 @@
   "image": "./images/items/vitality_increase_potion.png",
   "name": "Vitality Increase Potion",
   "type": "Special Potion",
-  "subType": "Cooldown: 1 second",
+  "cooldown": "1s",
   "bound": "Binds when obtained",
-  "destruction": "<span style=\"color: #C24B46\">Unsellable</span>,<span style=\"color: #C24B46\">Indestructible</span>,<span style=\"color: #C24B46\">Cannot be dismantled</span>",
+  "destruction": "<span style=\"color: #C24B46\">Unsellable</span>, <span style=\"color: #C24B46\">Indestructible</span>, <span style=\"color: #C24B46\">Cannot be dismantled</span>",
   "description": "Upon acquiring, automatically obtain <span style=\"color:#6FFFCF\">5</span> Vitality."
 }
