--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "leaflet": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-notification": "^1.3.20",
     "vue-popperjs": "^2.3.0",
     "vue-router": "^3.5.2",
     "vue2-leaflet": "^2.7.1"
