--- a/src/assets/data/items/queens_knights_application.json
+++ b/src/assets/data/items/queens_knights_application.json
@@ -6,7 +6,7 @@
   "name": "Queen's Knights Application",
   "type": "Affinity Item",
   "bound": "Bound to Account on Pickup",
-  "destruction": "<span style=\"color: #C24B46\">Cannot be dismantled</span>",
+  "destruction": "<span style=\"color: #C24B46\">Unsellable</span>, <span style=\"color: #C24B46\">Indestructible</span>, <span style=\"color: #C24B46\">Cannot be dismantled</span>",
   "description": "<span style=\"color: #FFEC50\">A written form of application to the Queen's Knights, also known as the Spear of Vern. For many years, the knights have encouraged worthy warriors to join them by sending a letter of recommendation with this form enclosed. Warriors in Vern take great pride in receiving it.<br><br><span style=\"color: #FFEC50\">Sorang would love this.</span>",
   "cost": 18000,
   "currency": "silver"
