collectibles for east luterra

--- a/src/assets/data/map/boreas_domain.json
+++ b/src/assets/data/map/boreas_domain.json
@@ -3,8 +3,8 @@
   "name": "Borea's Domain",
   "id": "boreas_domain",
   "parent": "world",
-  "continent": "east_luterra",
-  "continentId": "East Luterra",
+  "continent": "East Luterra",
+  "continentId": "east_luterra",
   "icon": "./images/map/boreas_domain/boreas_domain.png",
   "minZoom": 2,
   "maxZoom": 4,
