--- a/src/assets/data/map/croconys_seashore.json
+++ b/src/assets/data/map/croconys_seashore.json
@@ -3,8 +3,8 @@
   "name": "Croconys Seashore",
   "id": "croconys_seashore",
   "parent": "world",
-  "continent": "east_luterra",
-  "continentId": "East Luterra",
+  "continent": "East Luterra",
+  "continentId": "east_luterra",
   "icon": "./images/map/croconys_seashore/croconys_seashore.png",
   "minZoom": 2,
   "maxZoom": 4,
